# pyOMA2-headless-stateless

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/pyoma2/algorithms/: __init__.py  base.py  fdd.py  plscf.py  ssi.py
src/pyoma2_headless/algorithms/: __init__.py  base.py  fdd.py  plscf.py  ssi.py
src/pyoma2_headless/functions/: clus.py
