[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyoma2_refactored"
version = "0.1.0"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A refactored, data-only version of pyOMA2 algorithms."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
dependencies = [
    "numpy",
    "pandas>=2.0.3",
    "scipy>=1.9.3",
    "pydantic>=2.5.1",
    "tqdm>=4.66.1",
    "scikit-learn>=1.3.2",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[tool.setuptools.packages.find]
where = ["src"]
